# project-model-deployment

./: .gitignore  README.md  build-docker.sh  dockerfile  pyproject.toml  requirements.txt  run-docker.sh
data/: application_test_smaller.parquet
models/: LGBMClassifier-reduced_features_v10.json  LGBMClassifier-reduced_features_v10.pickle
src/: app.py  data_caching.py  feature_engineering_small.py
