[project]
name = "project-model-deployment"
version = "0.1"
description = "Confirmez vos compétences en MLOps (Partie 2/2)"
authors = ["R C"]
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "scikit-learn==1.8.0",
    "numpy==2.4.2",
    "scipy==1.15.2",
    "pandas==2.2.2",
    "pyarrow==23.0.1",
    "lightgbm==4.6.0",
    "fastapi[standard]==0.136.0",
    "uvicorn==0.45.0"
]